update code finish